--- a/src/app/components/admin/envio-menu/envio-menu.component.html
+++ b/src/app/components/admin/envio-menu/envio-menu.component.html
@@ -32,7 +32,7 @@
     </div> -->
 
     @if (showMenus) {
-    <div class="flex flex-col justify-between w-full h-[calc(100%-110px)] overflow-auto">
+    <div class="flex flex-col justify-between w-full h-[calc(100%-43px)] overflow-auto">
 
       @if (loadingMenu) {
       <div class="w-full h-full flex justify-center items-center">
@@ -151,9 +151,9 @@
         <div class="font-semibold text-sm">{{listSelectableProducts.name}}</div>
       </mat-checkbox>
     </div> -->
-    <div class="w-full h-[calc(100%-110px)] overflow-auto">
+    <div class="w-full h-[calc(100%-43px)] overflow-auto">
       @for (sincroProd of listSelectableProducts.children; track sincroProd) {
-      <div class="m-1 pl-2 pt-2 w-full">
+      <div class="m-1 pb-2">
         <div class="font-semibold text-lg">
           <p>> Sincro: {{sincroProd.syncrosId.slice(0, sincroProd.syncrosId.indexOf('-'))}} - Fecha:
             {{sincroProd.endTime | date: 'd/M/yy,
