--- a/src/app/components/admin/dashboard/dashboard.component.html
+++ b/src/app/components/admin/dashboard/dashboard.component.html
@@ -15,41 +15,34 @@
 <div class="h-2/4">
   <p class="text-xl mb-2">Sincronizaciones con Maxpoint</p>
 
-
-  @if (loadingSyncs) {
+  @if (!data) {
     <div class="w-full h-full flex justify-center items-center">
       <div class="loader"></div>
     </div>
-
-    
-  } @else if(showSyncs){
+  } @else if(data.length > 0) {
     <div style="height: 72%;" class="overflow-auto">
-    <div class="grid justify-items-stretch grid-cols-6 2xl:grid-cols-12 gap-1 text-xs">
-      <div *ngFor="let menuItem of data" class="shadow-2xl">
-        <div [class]="menuItem.status" class="cursor-pointer" (click)="openMenuDetail(menuItem.syncros_id)">
-          <p><b>ID: </b>{{menuItem.syncros_id}}</p>
-          <p><b>Estado: </b>{{menuItem.status}}</p>
-          <p><b>Tiempo Inicial: </b> {{menuItem.start_time | date: 'd/M/yy, h:mm:ssa':'GMT'}}</p>
-          <p><b>Tiempo Final: </b>{{menuItem.end_time | date: 'd/M/yy, h:mm:ssa':'GMT'}}</p>
-          <p><b>Tiempo Transcurrido: </b>{{menuItem.tt}}</p>
-          <p><b>Tipo de Ejecucion: </b>{{menuItem.mode}}</p>
-          @if (menuItem.percentage !== "100%") {
-          <p><b>Porcentaje: </b><p-progressBar [value]="menuItem.percentage.replace('%','')" /></p>
-          }
+      <div class="grid justify-items-stretch grid-cols-6 2xl:grid-cols-12 gap-1 text-xs">
+        <div *ngFor="let menuItem of data" class="shadow-2xl">
+          <div [class]="menuItem.status" class="cursor-pointer">
+            <p><b>ID: </b>{{menuItem.syncros_id}}</p>
+            <p><b>Estado: </b>{{menuItem.status}}</p>
+            <p><b>Tiempo Inicial: </b> {{menuItem.start_time | date: 'd/M/yy, h:mm:ssa':'GMT'}}</p>
+            <p><b>Tiempo Final: </b>{{menuItem.end_time | date: 'd/M/yy, h:mm:ssa':'GMT'}}</p>
+            <p><b>Tiempo Transcurrido: </b>{{menuItem.tt}}</p>
+            <p><b>Tipo de Ejecucion: </b>{{menuItem.mode}}</p>
+            @if (menuItem.percentage !== "100%") {
+              <p><b>Porcentaje: </b><p-progressBar [value]="menuItem.percentage.replace('%','')" /></p>
+            }
+          </div>
         </div>
       </div>
     </div>
-    
+    <p-paginator [rows]="rows" [totalRecords]="total_records" (onPageChange)="paginate($event)"></p-paginator>
 
-  </div>
-  <p-paginator [rows]="rows" [totalRecords]="total_records" (onPageChange)="paginate($event)"></p-paginator>
-
-  } @else {
+  } @else if(data.length === 0) {
     <div class="w-full h-full flex justify-center items-center">
       <div class="text-3xl text-slate-400">No hay Data</div>
     </div>
   }
 
-
-  
 </div>
