--- a/src/app/components/admin/canal-envio/canal-envio.component.html
+++ b/src/app/components/admin/canal-envio/canal-envio.component.html
@@ -9,7 +9,7 @@
             <div class="w-full h-[calc(100%-110px)] overflow-auto">
                 <mat-radio-group aria-label="Select an option" class="flex flex-col" (change)="cambiarMenu($event)"
                     [(ngModel)]="menuSeleccionado">
-                    @for (menusSeleccionado of menusSeleccionados; track menusSeleccionado) {
+                    @for (menusSeleccionado of menusUnificados; track menusSeleccionado) {
                     <mat-radio-button class="m-1" [checked]="menusSeleccionado.checked" [value]="menusSeleccionado">
                         <div class="border border-gray-300 py-1 px-5 text-xs flex items-center">
                             <p>{{menusSeleccionado.title}}</p>
